--- a/pwa/src/app/app.component.html
+++ b/pwa/src/app/app.component.html
@@ -1,1 +1,24 @@
-<router-outlet></router-outlet>
+<mat-toolbar>
+    <div class="container">
+        <mat-toolbar-row>
+            <button mat-button color="primary">
+                <img class="toolbar" src="../../../assets/ForYouFitnessLogo.png" />
+            </button>
+            <a mat-button routerLink="/home">For
+                You</a>
+            <a mat-button routerLink="/about">About Me</a>
+            <a mat-button routerLink="/offerings">Offerings</a>
+            <a mat-button routerLink="/contact">Contact</a>
+            <span class="spacer"></span>
+            <mat-divider [vertical]="true"></mat-divider>
+            <a mat-button color="accent" routerLink="/login">
+                <span class="myButton">
+                    <mat-icon>login</mat-icon>Login
+                </span>
+            </a>
+        </mat-toolbar-row>
+    </div>
+</mat-toolbar>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
