Login page structure complete - no functionality

--- a/pwa/src/app/public/login/login.component.html
+++ b/pwa/src/app/public/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<mat-card>
+    <mat-card-content>
+        <img src="../../../assets/ForYouFitnessLogo_Name.jpg" />
+        <mat-form-field appearance="outline">
+            <mat-label>Username</mat-label>
+            <input matInput>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput>
+        </mat-form-field>
+        <mat-card-actions align="end">
+            <button mat-stroked-button>Register</button>
+            <span class="spacer"></span>
+            <button mat-flat-button color="primary">Sign In</button>
+        </mat-card-actions>
+    </mat-card-content>
+</mat-card>
