quick change to the color scheme - looks nicer :)

--- a/pwa/src/app/public/login/login.component.html
+++ b/pwa/src/app/public/login/login.component.html
@@ -1,11 +1,11 @@
 <mat-card>
     <mat-card-content>
         <img src="../../../assets/ForYouFitnessLogo_Name.jpg" />
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" color="accent">
             <mat-label>Username</mat-label>
             <input matInput>
         </mat-form-field>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" color="accent">
             <mat-label>Password</mat-label>
             <input matInput>
         </mat-form-field>
