--- a/pwa/src/app/public/home/home.component.html
+++ b/pwa/src/app/public/home/home.component.html
@@ -1,1 +1,69 @@
-<img src="../../../assets/ForYouFitnessLogo_Name.jpg" />
+<div class="container">
+    <mat-card>
+        <mat-card-title>Hero/Slideshow</mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+        <mat-card-content>...</mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="primary">Gallery</button>
+        </mat-card-actions>
+    </mat-card>
+    <mat-card>
+        <mat-card-title>Executive Summary</mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+        <mat-card-content>
+            <ul>
+                <li>20 years trial and error</li>
+                <li>Successful weightloss as a working professional</li>
+                <li>Formula is the same for everyone</li>
+                <li>What we use is different for everyone</li>
+                <li>Simple modifications = compounding results</li>
+                <li>Partnership to design something by planning for the hard parts</li>
+            </ul>
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="accent">LinkedIn</button>
+            <span class="spacer"></span>
+            <button mat-flat-button color="primary" [routerLink]="'/contact'">Contact</button>
+        </mat-card-actions>
+    </mat-card>
+    <mat-card>
+        <mat-card-title>Offerings</mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+        <mat-card-content>
+            <code><strong>TODO</strong> - Break into two cards side by side</code>
+            <ul>
+                <li>Training Programs</li>
+                <ul>
+                    <li>Youth - Health</li>
+                    <li>Youth - Athletic</li>
+                    <li>Adults - Health</li>
+                    <li>Adults - Endurance</li>
+                    <li>Adults - Strength</li>
+                    <li>Adults - Fat Loss</li>
+                </ul>
+                <li>Nutrition Coaching (experienced in)</li>
+                <ul>
+                    <li>Vegetarian, Pescatarian, Vegan, etc.</li>
+                    <li>Low Carb, Ketogenic, etc.</li>
+                    <li>Paleo, Caveman, Carnivore, etc.</li>
+                    <li>Mediterranean</li>
+                    <li>Atkins</li>
+                    <li>Intermittent Fasting</li>
+                </ul>
+            </ul>
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="primary" [routerLink]="'/offerings'">Offerings</button>
+        </mat-card-actions>
+    </mat-card>
+    <mat-card>
+        <mat-card-title>Personal Transformation</mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+        <mat-card-content>
+            ...
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="accent" [routerLink]="'/contact'">Contact</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
