--- a/pwa/src/app/public/login/login.component.css
+++ b/pwa/src/app/public/login/login.component.css
@@ -1,6 +1,6 @@
 .mat-card {
   margin-top: 2vh;
-  background-color: #4B0075;
+  background-color: #4b0075;
 }
 .mat-card img {
   width: 100%;
@@ -21,6 +21,10 @@
 .mat-card-actions {
   background-color: black;
   border-radius: 5px;
-  padding: 1vh;
-  margin: .1vh;
+  padding: 2vh 0 2vh 0;
+  margin: 0.1vh;
+}
+.mat-card-actions .mat-button, .mat-flat-button {
+  margin-left: 10%;
+  margin-right: 10%;
 }
