--- a/pwa/src/app/public/login/login.component.html
+++ b/pwa/src/app/public/login/login.component.html
@@ -7,12 +7,12 @@
         </mat-form-field>
         <mat-form-field appearance="outline" color="accent">
             <mat-label>Password</mat-label>
-            <input matInput>
+            <input matInput type="password">
         </mat-form-field>
         <mat-card-actions align="end">
-            <button mat-stroked-button>Register</button>
+            <a mat-button>Register?</a>
             <span class="spacer"></span>
-            <button mat-flat-button color="primary">Sign In</button>
+            <button mat-flat-button color="accent">Sign In</button>
         </mat-card-actions>
     </mat-card-content>
 </mat-card>
