--- a/pwa/src/app/public/pages/home/home.component.css
+++ b/pwa/src/app/public/pages/home/home.component.css
@@ -3,8 +3,8 @@ img {
   margin-top: 2vh;
   opacity: 0.3;
 }
-.spacer{
-    flex: 1 1 auto;
+.spacer {
+  flex: 1 1 auto;
 }
 .container {
   width: 80%;
@@ -13,4 +13,12 @@ img {
 }
 .mat-card {
   margin: 2vh auto;
+}
+.offerings {
+  display: flex;
+}
+#resistance,
+#nutrition {
+  width: 40%;
+  display: block;
 }
