--- a/pwa/src/styles.css
+++ b/pwa/src/styles.css
@@ -3,8 +3,38 @@
 * https://materialtheme.arcsine.dev
 * Fork at: https://materialtheme.arcsine.dev/?c=YHBhbGV0dGU$YHByaW1hcnk$YF48IzRiMDA3NSIsIj9lcjwjYzliM2Q2IiwiO2VyPCMzMzAwNTh$LCIlPmBePCNmZmU0MDAiLCI~ZXI8I2ZmZjdiMyIsIjtlcjwjZmZkOTAwfiwid2Fybj5gXjwjZmYwMDAwIiwiP2VyPCNmZmIzYjMiLCI7ZXI8I2ZmMDAwMH4sIj9UZXh0PCMwMDAwMDAiLCI~PTwjZmFmYWZhIiwiO1RleHQ8I2ZmZmZmZiIsIjs9PCMyYzJjMmN$LCJmb250cz5bYEA8KC00fixgQDwoLTN$LGBAPCgtMn4sYEA8KC0xfixgQDxoZWFkbGluZX4sYEA8dGl0bGV$LGBAPHN1YiktMn4sYEA8c3ViKS0xfixgQDxib2R5LTJ$LGBAPGJvZHktMX4sYEA8YnV0dG9ufixgQDxjYXB0aW9ufixgQDxpbnB1dCIsInNpemU$bnVsbH1dLCJpY29uczxSb3VuZGVkIiwiP25lc3M$ZmFsc2UsInZlcnNpb24$MTF9
 */
-@import "https://fonts.googleapis.com/icon?family=Material+Icons+Round";
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+@font-face {
+  font-family: ForYouFont;
+  src: url("./assets/fonts/kirsty.rg-regular.otf");
+}
+@font-face {
+  font-family: ForYouFont;
+  src: url("./assets/fonts/kirsty.rg-bold.otf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: ForYouFont;
+  src: url("./assets/fonts/kirsty.rg-italic.otf");
+  font-style: italic;
+}
+@font-face {
+  font-family: ForYouFont;
+  src: url("./assets/fonts/kirsty.rg-bolditalic.otf");
+  font-style: italic;
+  font-weight: bold;
+}
+/**
+* Generated theme by Material Theme Generator
+* https://materialtheme.arcsine.dev
+* Fork at: https://materialtheme.arcsine.dev/?c=YHBhbGV0dGU$YHByaW1hcnk$YF48IzRiMDA3NSIsIj9lcjwjYzliM2Q2IiwiO2VyPCMzMzAwNTh$LCIlPmBePCNmZmU0MDAiLCI~ZXI8I2ZmZjdiMyIsIjtlcjwjZmZkOTAwfiwid2Fybj5gXjwjY2UwMDAwIiwiP2VyPCNmMGIzYjMiLCI7ZXI8I2JjMDAwMH4sIj9UZXh0PCMwMDAwMDAiLCI~PTwjZmFmYWZhIiwiO1RleHQ8I2ZmZmZmZiIsIjs9PCMyYzJjMmN$LCJmb250cz5bYEA8KC00IiwiZmFtaWx5PFNwZWN0cmFsIFNDfixgQDwoLTMiLCJmYW1pbHk8U3BlY3RyYWwgU0N$LGBAPCgtMiIsImZhbWlseTxTcGVjdHJhbCBTQ34sYEA8KC0xIiwiZmFtaWx5PFNwZWN0cmFsIFNDfixgQDxoZWFkbGluZSIsImZhbWlseTxTcGVjdHJhbCBTQ34sYEA8dGl0bGUiLCJmYW1pbHk8U3BlY3RyYWwgU0N$LGBAPHN1YiktMiIsImZhbWlseTxTcGVjdHJhbCBTQ34sYEA8c3ViKS0xIiwiZmFtaWx5PFNwZWN0cmFsIFNDfixgQDxib2R5LTIiLCJmYW1pbHk8U3BlY3RyYWwgU0N$LGBAPGJvZHktMSIsImZhbWlseTxTcGVjdHJhbCBTQ34sYEA8YnV0dG9uIiwiZmFtaWx5PFNwZWN0cmFsIFNDfixgQDxjYXB0aW9uIiwiZmFtaWx5PFNwZWN0cmFsIFNDfixgQDxpbnB1dCIsImZhbWlseTxTcGVjdHJhbCBTQyIsInNpemU$bnVsbH1dLCJpY29uczxGaWxsZWQiLCI~bmVzcz5mYWxzZSwidmVyc2lvbj4xMX0=
+*/
+/**
+* Generated theme by Material Theme Generator
+* https://materialtheme.arcsine.dev
+* Fork at: https://materialtheme.arcsine.dev/?c=YHBhbGV0dGU$YHByaW1hcnk$YF48IzRiMDA3NSIsIj9lcjwjYzliM2Q2IiwiO2VyPCMzMzAwNTh$LCIlPmBePCNmZmU0MDAiLCI~ZXI8I2ZmZjdiMyIsIjtlcjwjZmZkOTAwfiwid2Fybj5gXjwjY2UwMDAwIiwiP2VyPCNmMGIzYjMiLCI7ZXI8I2JjMDAwMH4sIj9UZXh0PCMwMDAwMDAiLCI~PTwjZmFmYWZhIiwiO1RleHQ8I2ZmZmZmZiIsIjs9PCMyYzJjMmN$LCJmb250cz5bYEA8KC00IiwiZmFtaWx5PEJhc2ljfixgQDwoLTMiLCJmYW1pbHk8QmFzaWN$LGBAPCgtMiIsImZhbWlseTxCYXNpY34sYEA8KC0xIiwiZmFtaWx5PEJhc2ljfixgQDxoZWFkbGluZSIsImZhbWlseTxCYXNpY34sYEA8dGl0bGUiLCJmYW1pbHk8QmFzaWN$LGBAPHN1YiktMiIsImZhbWlseTxCYXNpY34sYEA8c3ViKS0xIiwiZmFtaWx5PEJhc2ljfixgQDxib2R5LTIiLCJmYW1pbHk8QmFzaWN$LGBAPGJvZHktMSIsImZhbWlseTxCYXNpY34sYEA8YnV0dG9uIiwiZmFtaWx5PEJhc2ljfixgQDxjYXB0aW9uIiwiZmFtaWx5PEJhc2ljfixgQDxpbnB1dCIsImZhbWlseTxCYXNpYyIsInNpemU$bnVsbH1dLCJpY29uczxGaWxsZWQiLCI~bmVzcz5mYWxzZSwidmVyc2lvbj4xMX0=
+*/
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+@import url("https://fonts.googleapis.com/css2?family=Basic:wght@300;400;500&display=swap");
 .mat-badge-content {
   font-weight: 600;
   font-size: 12px;
@@ -21,7 +51,7 @@
 .mat-h1,
 .mat-headline,
 .mat-typography h1 {
-  font: 400 24px/32px Roboto;
+  font: 400 24px/32px Basic;
   letter-spacing: 0em;
   margin: 0 0 16px;
 }
@@ -29,7 +59,7 @@
 .mat-h2,
 .mat-title,
 .mat-typography h2 {
-  font: 500 20px/32px Roboto;
+  font: 500 20px/32px Basic;
   letter-spacing: 0.0075em;
   margin: 0 0 16px;
 }
@@ -37,7 +67,7 @@
 .mat-h3,
 .mat-subheading-2,
 .mat-typography h3 {
-  font: 400 16px/28px Roboto;
+  font: 400 16px/28px Basic;
   letter-spacing: 0.0094em;
   margin: 0 0 16px;
 }
@@ -45,33 +75,33 @@
 .mat-h4,
 .mat-subheading-1,
 .mat-typography h4 {
-  font: 500 15px/24px Roboto;
+  font: 500 15px/24px Basic;
   letter-spacing: 0.0067em;
   margin: 0 0 16px;
 }
 
 .mat-h5,
 .mat-typography h5 {
-  font: 400 calc(14px * 0.83) / 20px Roboto;
+  font: 400 calc(14px * 0.83) / 20px Basic;
   margin: 0 0 12px;
 }
 
 .mat-h6,
 .mat-typography h6 {
-  font: 400 calc(14px * 0.67) / 20px Roboto;
+  font: 400 calc(14px * 0.67) / 20px Basic;
   margin: 0 0 12px;
 }
 
 .mat-body-strong,
 .mat-body-2 {
-  font: 500 14px/24px Roboto;
+  font: 500 14px/24px Basic;
   letter-spacing: 0.0179em;
 }
 
 .mat-body,
 .mat-body-1,
 .mat-typography {
-  font: 400 14px/20px Roboto;
+  font: 400 14px/20px Basic;
   letter-spacing: 0.0179em;
 }
 .mat-body p,
@@ -82,40 +112,40 @@
 
 .mat-small,
 .mat-caption {
-  font: 400 12px/20px Roboto;
+  font: 400 12px/20px Basic;
   letter-spacing: 0.0333em;
 }
 
 .mat-display-4,
 .mat-typography .mat-display-4 {
-  font: 300 112px/112px Roboto;
+  font: 300 112px/112px Basic;
   letter-spacing: -0.0134em;
   margin: 0 0 56px;
 }
 
 .mat-display-3,
 .mat-typography .mat-display-3 {
-  font: 400 56px/56px Roboto;
+  font: 400 56px/56px Basic;
   letter-spacing: -0.0089em;
   margin: 0 0 64px;
 }
 
 .mat-display-2,
 .mat-typography .mat-display-2 {
-  font: 400 45px/48px Roboto;
+  font: 400 45px/48px Basic;
   letter-spacing: 0em;
   margin: 0 0 64px;
 }
 
 .mat-display-1,
 .mat-typography .mat-display-1 {
-  font: 400 34px/40px Roboto;
+  font: 400 34px/40px Basic;
   letter-spacing: 0.0074em;
   margin: 0 0 64px;
 }
 
 .mat-bottom-sheet-container {
-  font: 400 14px/20px Roboto;
+  font: 400 14px/20px Basic;
   letter-spacing: 0.0179em;
 }
 
@@ -126,7 +156,7 @@
 .mat-flat-button,
 .mat-fab,
 .mat-mini-fab {
-  font-family: Roboto;
+  font-family: "ForYouFont";
   font-size: 14px;
   font-weight: 500;
 }
@@ -134,6 +164,7 @@
 .mat-card-title {
   font-size: 24px;
   font-weight: 500;
+  font-family: "ForYouFont";
 }
 
 .mat-card-header .mat-card-title {
@@ -144,7 +175,9 @@
 .mat-card-content {
   font-size: 14px;
 }
-
+.mat-card-content{
+  font-family: 'Basic';
+}
 .mat-checkbox-layout .mat-checkbox-label {
   line-height: 24px;
 }
@@ -184,18 +217,18 @@
 }
 
 .mat-dialog-title {
-  font: 500 20px/32px Roboto;
+  font: 500 20px/32px Basic;
   letter-spacing: 0.0075em;
 }
 
 .mat-expansion-panel-header {
-  font-family: Roboto;
+  font-family: Basic;
   font-size: 15px;
   font-weight: 500;
 }
 
 .mat-expansion-panel-content {
-  font: 400 14px/20px Roboto;
+  font: 400 14px/20px Basic;
   letter-spacing: 0.0179em;
 }
 
@@ -203,7 +236,7 @@
   font-size: inherit;
   font-weight: 400;
   line-height: 1.125;
-  font-family: Roboto;
+  font-family: Basic;
   letter-spacing: 1.5px;
 }
 
@@ -421,14 +454,14 @@ input.mat-input-element {
 }
 
 .mat-menu-item {
-  font-family: Roboto;
+  font-family: Basic;
   font-size: 14px;
   font-weight: 400;
 }
 
 .mat-paginator,
 .mat-paginator-page-size .mat-select-trigger {
-  font-family: Roboto;
+  font-family: Basic;
   font-size: 12px;
 }
 
@@ -461,7 +494,7 @@ input.mat-input-element {
 
 .mat-tab-label,
 .mat-tab-link {
-  font-family: Roboto;
+  font-family: Basic;
   font-size: 14px;
   font-weight: 500;
 }
@@ -473,7 +506,7 @@ input.mat-input-element {
 .mat-toolbar h4,
 .mat-toolbar h5,
 .mat-toolbar h6 {
-  font: 500 20px/32px Roboto;
+  font: 500 20px/32px Basic;
   letter-spacing: 0.0075em;
   margin: 0;
 }
@@ -519,7 +552,7 @@ input.mat-input-element {
 }
 
 .mat-list-base .mat-subheader {
-  font-family: Roboto;
+  font-family: Basic;
   font-size: 14px;
   font-weight: 500;
 }
@@ -562,12 +595,12 @@ input.mat-input-element {
 }
 
 .mat-optgroup-label {
-  font: 500 14px/24px Roboto;
+  font: 500 14px/24px Basic;
   letter-spacing: 0.0179em;
 }
 
 .mat-simple-snackbar {
-  font-family: Roboto;
+  font-family: Basic;
   font-size: 14px;
 }
 
@@ -619,7 +652,6 @@ input.mat-input-element {
   white-space: nowrap;
   outline: 0;
   -webkit-appearance: none;
-  appearance: none;
   -moz-appearance: none;
 }
 
@@ -755,9 +787,9 @@ body {
 }
 
 body {
-  --warn-color: #ff0000;
-  --warn-lighter-color: #ffb3b3;
-  --warn-darker-color: #ff0000;
+  --warn-color: #ce0000;
+  --warn-lighter-color: #f0b3b3;
+  --warn-darker-color: #bc0000;
   --text-warn-color: #ffffff;
   --text-warn-lighter-color: rgba(0, 0, 0, 0.87);
   --text-warn-darker-color: #ffffff;
@@ -794,7 +826,7 @@ body {
 }
 
 .mat-warn .mat-option.mat-selected:not(.mat-option-disabled) {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-optgroup-label {
@@ -830,7 +862,7 @@ body {
 
 .mat-warn .mat-pseudo-checkbox-checked,
 .mat-warn .mat-pseudo-checkbox-indeterminate {
-  background: red;
+  background: #ce0000;
 }
 
 .mat-pseudo-checkbox-checked.mat-pseudo-checkbox-disabled,
@@ -1006,7 +1038,7 @@ body {
 
 .mat-badge-warn .mat-badge-content {
   color: white;
-  background: red;
+  background: #ce0000;
 }
 
 .mat-badge {
@@ -1232,7 +1264,7 @@ body {
 .mat-button.mat-warn,
 .mat-icon-button.mat-warn,
 .mat-stroked-button.mat-warn {
-  color: red;
+  color: #ce0000;
 }
 .mat-button.mat-primary.mat-button-disabled,
 .mat-button.mat-accent.mat-button-disabled,
@@ -1261,7 +1293,7 @@ body {
 .mat-button.mat-warn .mat-button-focus-overlay,
 .mat-icon-button.mat-warn .mat-button-focus-overlay,
 .mat-stroked-button.mat-warn .mat-button-focus-overlay {
-  background-color: red;
+  background-color: #ce0000;
 }
 .mat-button.mat-button-disabled .mat-button-focus-overlay,
 .mat-icon-button.mat-button-disabled .mat-button-focus-overlay,
@@ -1342,7 +1374,7 @@ body {
 .mat-raised-button.mat-warn,
 .mat-fab.mat-warn,
 .mat-mini-fab.mat-warn {
-  background-color: red;
+  background-color: #ce0000;
 }
 .mat-flat-button.mat-primary.mat-button-disabled,
 .mat-flat-button.mat-accent.mat-button-disabled,
@@ -1499,7 +1531,7 @@ body {
 }
 
 .mat-card {
-  background: #0d0d0d;
+  background: #393939;
   color: white;
 }
 .mat-card:not([class*="mat-elevation-z"]) {
@@ -1543,7 +1575,7 @@ body {
 
 .mat-checkbox-indeterminate.mat-warn .mat-checkbox-background,
 .mat-checkbox-checked.mat-warn .mat-checkbox-background {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-checkbox-disabled.mat-checkbox-checked .mat-checkbox-background,
@@ -1579,7 +1611,7 @@ body {
 
 .mat-checkbox-checked:not(.mat-checkbox-disabled).mat-warn .mat-ripple-element,
 .mat-checkbox:active:not(.mat-checkbox-disabled).mat-warn .mat-ripple-element {
-  background: red;
+  background: #ce0000;
 }
 
 .mat-chip.mat-standard-chip {
@@ -1617,7 +1649,7 @@ body {
 }
 
 .mat-chip.mat-standard-chip.mat-chip-selected.mat-warn {
-  background-color: red;
+  background-color: #ce0000;
   color: white;
 }
 .mat-chip.mat-standard-chip.mat-chip-selected.mat-warn .mat-chip-remove {
@@ -1881,7 +1913,7 @@ td.mat-footer-cell {
   background-color: rgba(255, 228, 0, 0.3);
 }
 .mat-datepicker-content.mat-warn .mat-calendar-body-in-range::before {
-  background: rgba(255, 0, 0, 0.2);
+  background: rgba(206, 0, 0, 0.2);
 }
 .mat-datepicker-content.mat-warn .mat-calendar-body-comparison-identical,
 .mat-datepicker-content.mat-warn
@@ -1895,7 +1927,7 @@ td.mat-footer-cell {
   .mat-calendar-body-comparison-bridge-end::before {
   background: linear-gradient(
     to right,
-    rgba(255, 0, 0, 0.2) 50%,
+    rgba(206, 0, 0, 0.2) 50%,
     rgba(249, 171, 0, 0.2) 50%
   );
 }
@@ -1906,7 +1938,7 @@ td.mat-footer-cell {
   .mat-calendar-body-comparison-bridge-start::before {
   background: linear-gradient(
     to left,
-    rgba(255, 0, 0, 0.2) 50%,
+    rgba(206, 0, 0, 0.2) 50%,
     rgba(249, 171, 0, 0.2) 50%
   );
 }
@@ -1925,13 +1957,13 @@ td.mat-footer-cell {
   background: #46a35e;
 }
 .mat-datepicker-content.mat-warn .mat-calendar-body-selected {
-  background-color: red;
+  background-color: #ce0000;
   color: white;
 }
 .mat-datepicker-content.mat-warn
   .mat-calendar-body-disabled
   > .mat-calendar-body-selected {
-  background-color: rgba(255, 0, 0, 0.4);
+  background-color: rgba(206, 0, 0, 0.4);
 }
 .mat-datepicker-content.mat-warn
   .mat-calendar-body-today.mat-calendar-body-selected {
@@ -1954,7 +1986,7 @@ td.mat-footer-cell {
   > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(
     .mat-calendar-body-comparison-identical
   ) {
-  background-color: rgba(255, 0, 0, 0.3);
+  background-color: rgba(206, 0, 0, 0.3);
 }
 
 .mat-datepicker-content-touch {
@@ -1969,7 +2001,7 @@ td.mat-footer-cell {
   color: #ffe400;
 }
 .mat-datepicker-toggle-active.mat-warn {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-date-range-input-inner[disabled] {
@@ -2061,7 +2093,7 @@ td.mat-footer-cell {
   color: #ffe400;
 }
 .mat-form-field.mat-focused .mat-form-field-label.mat-warn {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-focused .mat-form-field-required-marker {
@@ -2079,7 +2111,7 @@ td.mat-footer-cell {
   background-color: #ffe400;
 }
 .mat-form-field.mat-focused .mat-form-field-ripple.mat-warn {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-form-field-type-mat-native-select.mat-focused:not(.mat-form-field-invalid)
@@ -2098,26 +2130,26 @@ td.mat-footer-cell {
     .mat-form-field-invalid
   ).mat-warn
   .mat-form-field-infix::after {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field.mat-form-field-invalid .mat-form-field-label {
-  color: red;
+  color: #ce0000;
 }
 .mat-form-field.mat-form-field-invalid .mat-form-field-label.mat-accent,
 .mat-form-field.mat-form-field-invalid
   .mat-form-field-label
   .mat-form-field-required-marker {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
 .mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-error {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field-appearance-legacy .mat-form-field-label {
@@ -2200,12 +2232,12 @@ td.mat-footer-cell {
 
 .mat-form-field-appearance-outline.mat-focused.mat-warn
   .mat-form-field-outline-thick {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid
   .mat-form-field-outline-thick {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field-appearance-outline.mat-form-field-disabled
@@ -2227,7 +2259,7 @@ td.mat-footer-cell {
 }
 
 .mat-icon.mat-warn {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field-type-mat-native-select .mat-form-field-infix::after {
@@ -2268,12 +2300,12 @@ td.mat-footer-cell {
 
 .mat-form-field.mat-warn .mat-input-element,
 .mat-form-field-invalid .mat-input-element {
-  caret-color: red;
+  caret-color: #ce0000;
 }
 
 .mat-form-field-type-mat-native-select.mat-form-field-invalid
   .mat-form-field-infix::after {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-list-base .mat-list-item {
@@ -2393,15 +2425,15 @@ td.mat-footer-cell {
 }
 
 .mat-progress-bar.mat-warn .mat-progress-bar-background {
-  fill: #ffb3b3;
+  fill: #f0b3b3;
 }
 
 .mat-progress-bar.mat-warn .mat-progress-bar-buffer {
-  background-color: #ffb3b3;
+  background-color: #f0b3b3;
 }
 
 .mat-progress-bar.mat-warn .mat-progress-bar-fill::after {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-progress-spinner circle,
@@ -2416,7 +2448,7 @@ td.mat-footer-cell {
 
 .mat-progress-spinner.mat-warn circle,
 .mat-spinner.mat-warn circle {
-  stroke: red;
+  stroke: #ce0000;
 }
 
 .mat-radio-outer-circle {
@@ -2450,7 +2482,7 @@ td.mat-footer-cell {
 }
 
 .mat-radio-button.mat-warn.mat-radio-checked .mat-radio-outer-circle {
-  border-color: red;
+  border-color: #ce0000;
 }
 
 .mat-radio-button.mat-warn .mat-radio-inner-circle,
@@ -2459,7 +2491,7 @@ td.mat-footer-cell {
   .mat-ripple-element:not(.mat-radio-persistent-ripple),
 .mat-radio-button.mat-warn.mat-radio-checked .mat-radio-persistent-ripple,
 .mat-radio-button.mat-warn:active .mat-radio-persistent-ripple {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-radio-button.mat-radio-disabled.mat-radio-checked .mat-radio-outer-circle,
@@ -2516,11 +2548,11 @@ td.mat-footer-cell {
 }
 
 .mat-form-field.mat-focused.mat-warn .mat-select-arrow {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field .mat-select.mat-select-invalid .mat-select-arrow {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-form-field .mat-select.mat-select-disabled .mat-select-arrow {
@@ -2590,15 +2622,15 @@ td.mat-footer-cell {
 }
 
 .mat-slide-toggle.mat-warn.mat-checked .mat-slide-toggle-thumb {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-slide-toggle.mat-warn.mat-checked .mat-slide-toggle-bar {
-  background-color: rgba(255, 0, 0, 0.54);
+  background-color: rgba(206, 0, 0, 0.54);
 }
 
 .mat-slide-toggle.mat-warn.mat-checked .mat-ripple-element {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-slide-toggle:not(.mat-checked) .mat-ripple-element {
@@ -2650,7 +2682,7 @@ td.mat-footer-cell {
 .mat-warn .mat-slider-track-fill,
 .mat-warn .mat-slider-thumb,
 .mat-warn .mat-slider-thumb-label {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-warn .mat-slider-thumb-label-text {
@@ -2658,7 +2690,7 @@ td.mat-footer-cell {
 }
 
 .mat-warn .mat-slider-focus-ring {
-  background-color: rgba(255, 0, 0, 0.2);
+  background-color: rgba(206, 0, 0, 0.2);
 }
 
 .mat-slider:hover .mat-slider-track-background,
@@ -2793,13 +2825,13 @@ td.mat-footer-cell {
 .mat-step-header.mat-warn .mat-step-icon-selected,
 .mat-step-header.mat-warn .mat-step-icon-state-done,
 .mat-step-header.mat-warn .mat-step-icon-state-edit {
-  background-color: red;
+  background-color: #ce0000;
   color: white;
 }
 
 .mat-step-header .mat-step-icon-state-error {
   background-color: transparent;
-  color: red;
+  color: #ce0000;
 }
 
 .mat-step-header .mat-step-label.mat-step-label-active {
@@ -2807,7 +2839,7 @@ td.mat-footer-cell {
 }
 
 .mat-step-header .mat-step-label.mat-step-label-error {
-  color: red;
+  color: #ce0000;
 }
 
 .mat-stepper-horizontal,
@@ -2978,12 +3010,12 @@ td.mat-footer-cell {
   .mat-tab-link.cdk-keyboard-focused:not(.mat-tab-disabled),
 .mat-tab-nav-bar.mat-warn
   .mat-tab-link.cdk-program-focused:not(.mat-tab-disabled) {
-  background-color: rgba(255, 179, 179, 0.3);
+  background-color: rgba(240, 179, 179, 0.3);
 }
 
 .mat-tab-group.mat-warn .mat-ink-bar,
 .mat-tab-nav-bar.mat-warn .mat-ink-bar {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-tab-group.mat-warn.mat-background-warn > .mat-tab-header .mat-ink-bar,
@@ -3195,7 +3227,7 @@ td.mat-footer-cell {
   .mat-tab-link.cdk-keyboard-focused:not(.mat-tab-disabled),
 .mat-tab-nav-bar.mat-background-warn
   .mat-tab-link.cdk-program-focused:not(.mat-tab-disabled) {
-  background-color: rgba(255, 179, 179, 0.3);
+  background-color: rgba(240, 179, 179, 0.3);
 }
 
 .mat-tab-group.mat-background-warn > .mat-tab-header,
@@ -3204,7 +3236,7 @@ td.mat-footer-cell {
 .mat-tab-nav-bar.mat-background-warn > .mat-tab-header,
 .mat-tab-nav-bar.mat-background-warn > .mat-tab-link-container,
 .mat-tab-nav-bar.mat-background-warn > .mat-tab-header-pagination {
-  background-color: red;
+  background-color: #ce0000;
 }
 
 .mat-tab-group.mat-background-warn > .mat-tab-header .mat-tab-label,
@@ -3270,7 +3302,7 @@ td.mat-footer-cell {
 }
 
 .mat-toolbar {
-  background: #0d0d0d;
+  background: #393939;
   color: white;
 }
 .mat-toolbar.mat-primary {
@@ -3282,7 +3314,7 @@ td.mat-footer-cell {
   color: rgba(0, 0, 0, 0.87);
 }
 .mat-toolbar.mat-warn {
-  background: red;
+  background: #ce0000;
   color: white;
 }
 .mat-toolbar .mat-form-field-underline,
@@ -3364,12 +3396,14 @@ td.mat-footer-cell {
 
 .material-icons {
   font-size: 24px;
-  font-family: "Material Icons Round", "Material Icons";
+  font-family: "Material Icons", "Material Icons";
 }
 .material-icons .mat-badge-content {
-  font-family: "Roboto";
+  font-family: "Basic";
 }
-html, body {
+
+html,
+body {
   background-color: black;
   margin: 0;
 }
