--- a/pwa/src/app/public/pages/home/home.component.html
+++ b/pwa/src/app/public/pages/home/home.component.html
@@ -1,9 +1,27 @@
 <div class="container">
     <app-slide-show></app-slide-show>
     <mat-card>
-        <mat-card-title>Executive Summary</mat-card-title>
+        <mat-card-title>For You Fitness</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
+        <mat-card-content id="summary">
+            <div id="executive-summary">
+                <p>For You Fitness is a personal training and nutrition coaching service that specializes in weight loss
+                    and
+                    personal transformation. We offer a variety of services to help you reach your goals. Our services
+                    are
+                    designed to help you lose weight, build muscle, and improve your overall health. We work with
+                    clients of
+                    all ages and fitness levels, and we are committed to helping you achieve your goals.</p>
+            </div>
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="primary" [routerLink]="'/contact'">Contact</button>
+        </mat-card-actions>
+    </mat-card>
+    <mat-card class="our-coach">
+        <mat-card-title>The Coach</mat-card-title>
         <mat-card-content>
+            <app-executive-profile></app-executive-profile>
             <ul>
                 <li>20 years trial and error</li>
                 <li>Successful weightloss as a working professional</li>
@@ -11,54 +29,64 @@
                 <li>What we use is different for everyone</li>
                 <li>Simple modifications = compounding results</li>
                 <li>Partnership to design something by planning for the hard parts</li>
+                <li>Holds a current NCCA recognized NASM-CPT Certification</li>
             </ul>
         </mat-card-content>
-        <mat-card-actions align="end">
-            <button mat-flat-button color="accent">LinkedIn</button>
+    </mat-card>
+    <mat-card class="experience">
+        <mat-card-title>Our Training Services</mat-card-title>
+        <mat-card-content class="offerings">
+            <mat-card id="resistance">
+                <mat-card-title>Programs</mat-card-title>
+                <mat-card-content>
+                    <ul>
+                        <li>Youth - Health</li>
+                        <li>Youth - Athletic</li>
+                        <li>Adults - Health</li>
+                        <li>Adults - Endurance</li>
+                        <li>Adults - Strength</li>
+                        <li>Adults - Fat Loss</li>
+                    </ul>
+                </mat-card-content>
+            </mat-card>
             <span class="spacer"></span>
-            <button mat-flat-button color="primary" [routerLink]="'/contact'">Contact</button>
+            <mat-card id="nutrition">
+                <mat-card-title>Nutrition</mat-card-title>
+                <mat-card-content>
+                    <ul>
+                        <li>Vegetarian, Pescatarian, Vegan...</li>
+                        <li>Low Carb, Ketogenic...</li>
+                        <li>Paleo, Caveman, Carnivore...</li>
+                        <li>Mediterranean</li>
+                        <li>Atkins</li>
+                        <li>Intermittent Fasting</li>
+                    </ul>
+                </mat-card-content>
+            </mat-card>
+        </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="primary" [routerLink]="'/offerings'">Offerings</button>
         </mat-card-actions>
     </mat-card>
-    <div class="offerings">
-        <mat-card id="nutrition">
-            <mat-card-title>Nutrition Coaching</mat-card-title>
-            <mat-card-content>
-                <ul>
-                    <li>Vegetarian, Pescatarian, Vegan, etc.</li>
-                    <li>Low Carb, Ketogenic, etc.</li>
-                    <li>Paleo, Caveman, Carnivore, etc.</li>
-                    <li>Mediterranean</li>
-                    <li>Atkins</li>
-                    <li>Intermittent Fasting</li>
-                </ul>
-            </mat-card-content>
-        </mat-card>
-        <span class="spacer"></span>
-        <mat-card id="resistance">
-            <mat-card-title>Resistance Training</mat-card-title>
-            <mat-card-content>
-                <ul>
-                    <li>Youth - Health</li>
-                    <li>Youth - Athletic</li>
-                    <li>Adults - Health</li>
-                    <li>Adults - Endurance</li>
-                    <li>Adults - Strength</li>
-                    <li>Adults - Fat Loss</li>
-                </ul>
-            </mat-card-content>
-        </mat-card>
-
-    </div>
 
     <mat-card>
         <mat-card-title>Personal Transformation</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
         <mat-card-content>
+            <h3>High School - Student Athlete</h3>
             <ul>
                 <li>2005 - 16yo - 200lbs</li>
                 <li>2007 - 18yo - 280lbs</li>
+            </ul>
+            <mat-divider [inset]="true"></mat-divider>
+            <h3>College - Lazy Student</h3>
+            <ul>
                 <li>2008 - 19yo - 310lbs</li>
                 <li>2010 - 21yo - 350lbs</li>
+            </ul>
+            <mat-divider [inset]="true"></mat-divider>
+            <h3>"Adulting"</h3>
+            <ul>
                 <li>2012 - 23yo - 250lbs</li>
                 <li>2014 - 25yo - 210lbs</li>
                 <li>2020 - 31yo - 250lbs</li>
