--- a/pwa/src/app/public/pages/home/home.component.html
+++ b/pwa/src/app/public/pages/home/home.component.html
@@ -32,6 +32,9 @@
                 <li>Holds a current NCCA recognized NASM-CPT Certification</li>
             </ul>
         </mat-card-content>
+        <mat-card-actions align="end">
+            <button mat-flat-button color="primary" [routerLink]="'/about'">About</button>
+        </mat-card-actions>
     </mat-card>
     <mat-card class="experience">
         <mat-card-title>Our Training Services</mat-card-title>
