--- a/pwa/src/app/public/pages/contact/contact.component.html
+++ b/pwa/src/app/public/pages/contact/contact.component.html
@@ -1,1 +1,74 @@
-<p>contact works!</p>
+<mat-card>
+    <form>
+        <mat-card-title>Get Started Today!</mat-card-title>
+        <mat-card-subtitle>...</mat-card-subtitle>
+        <mat-card-content class="formLayout">
+            <mat-card class="contactForm">
+                <mat-card-title>Contact Info</mat-card-title>
+                <mat-card-content>
+                    <mat-form-field color="accent" appearance="outline">
+                        <mat-label>Name</mat-label>
+                        <input matInput><mat-icon matSuffix>account_circle</mat-icon>
+                    </mat-form-field>
+                    <mat-form-field color="accent" appearance="outline">
+                        <mat-label>Email</mat-label>
+                        <input matInput><mat-icon matSuffix>alternate_email</mat-icon>
+                    </mat-form-field>
+                    <mat-form-field color="accent"  appearance="outline">
+                        <mat-label>Phone</mat-label>
+                        <input matInput><mat-icon matSuffix>phone</mat-icon>
+                    </mat-form-field>
+                </mat-card-content>
+            </mat-card>
+            <span class="spacer"></span>
+            <div class="serviceSelection">
+                <mat-card class="services">
+                    <mat-card-title>Services</mat-card-title>
+                    <mat-card-content>
+                        <div class="youthList">
+                            <strong>Youth Programs</strong>
+                            <span *ngFor="let service of youthServices">
+                                <mat-checkbox [value]="service.id">
+                                    {{service?.name}}
+                                </mat-checkbox>
+                                <br />
+                            </span>
+                        </div>
+                        <span class="spacer"></span>
+                        <div class="adultList">
+                            <strong>Adult Programs</strong>
+                            <span *ngFor="let service of adultServices">
+                                <mat-checkbox [value]="service.id">
+                                    {{service?.name}}
+                                </mat-checkbox>
+                                <br />
+                            </span>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <mat-card id="additionalInfo">
+                <mat-card-title>What can I do <strong>FOR YOU</strong>?</mat-card-title>
+                <div class="inputMessage">
+                    <mat-form-field color="accent" appearance="outline">
+                        <mat-label>Message</mat-label>
+                        <textarea matInput></textarea>
+                    </mat-form-field>
+                </div>
+                <div class="referenceSource">
+                    <h1>How did you hear about us?</h1>
+                    <mat-button-toggle-group name="referenceSource">
+                        <mat-button-toggle color="accent" *ngFor="let source of referenceSources" [value]="source.id">
+                            {{source?.name}}
+                        </mat-button-toggle>
+                    </mat-button-toggle-group>
+                </div>
+            </mat-card>
+        </mat-card-content>
+        <mat-card-footer>
+            <mat-card-actions align="end">
+                <button mat-raised-button color="primary">Submit</button>
+            </mat-card-actions>
+        </mat-card-footer>
+    </form>
+</mat-card>
