calling it a night - last apge needing initial content is offerings :)

--- a/pwa/src/app/public/pages/home/home.component.css
+++ b/pwa/src/app/public/pages/home/home.component.css
@@ -42,3 +42,15 @@ app-executive-profile{
   width:50%;
   display: inline-block
 }
+mat-card#transformation mat-card-content{
+  display: flex;
+  justify-content: space-around;
+}
+#beforePic, #afterPic{
+  opacity: unset;
+  margin: unset;
+  width: 40%;
+  border: 5px solid black;
+  border-radius: 10px;
+  background-color: #4b0075;
+}
