--- a/pwa/src/app/public/pages/home/home.component.html
+++ b/pwa/src/app/public/pages/home/home.component.html
@@ -72,33 +72,15 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card>
+    <mat-card id="transformation">
         <mat-card-title>Personal Transformation</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
         <mat-card-content>
-            <h3>High School - Student Athlete</h3>
-            <ul>
-                <li>2005 - 16yo - 200lbs</li>
-                <li>2007 - 18yo - 280lbs</li>
-            </ul>
-            <mat-divider [inset]="true"></mat-divider>
-            <h3>College - Lazy Student</h3>
-            <ul>
-                <li>2008 - 19yo - 310lbs</li>
-                <li>2010 - 21yo - 350lbs</li>
-            </ul>
-            <mat-divider [inset]="true"></mat-divider>
-            <h3>"Adulting"</h3>
-            <ul>
-                <li>2012 - 23yo - 250lbs</li>
-                <li>2014 - 25yo - 210lbs</li>
-                <li>2020 - 31yo - 250lbs</li>
-                <li>2023 - 34yo - 280lbs</li>
-                <li>2024 - 35yo - 225lbs</li>
-            </ul>
+           <img id="beforePic" src="../../../../assets/images/ForYouFitnessLogo_Mono-Black.png" />
+           <img id="afterPic" src="../../../../assets/images/ForYouFitnessLogo_Mono-White.png" />
         </mat-card-content>
         <mat-card-actions align="end">
-            <button mat-flat-button color="primary" [routerLink]="'/contact'">Contact</button>
+            <button mat-flat-button color="primary" [routerLink]="'/about'">About Me</button>
         </mat-card-actions>
     </mat-card>
 </div>
