upgraded node to v20 and have to redo the UX material components - theme is all messed up after upgrade

--- a/pwa/src/app/app.component.css
+++ b/pwa/src/app/app.component.css
@@ -1,22 +1,16 @@
-img.toolbar {
-  width: auto;
-  height: 60px;
-}
-.mat-toolbar-row .mat-button {
-  line-height: 60px;
-}
-.spacer {
-  flex: 1 1 auto;
-}
-
-.container {
+.container,
+.header {
   width: 80%;
   margin: auto;
   color: white;
 }
-.myButton {
-  display: flex;
+.mat-toolbar img {
+  height: 75px;
+  width: auto;
 }
-.myButton .mat-icon {
-  margin: auto 1vh;
+.spacer {
+  flex: 1 1 auto;
+}
+.header {
+  display: flex;
 }
