--- a/pwa/src/app/public/pages/about-me/about-me.component.html
+++ b/pwa/src/app/public/pages/about-me/about-me.component.html
@@ -12,35 +12,23 @@
                     {{card.summary}}
                 </div>
                 <div class="stats">
-                    STATS
+                    <mat-accordion>
+                        <mat-expansion-panel [expanded]="false">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title>Programs</mat-panel-title>
+                            </mat-expansion-panel-header>
+                            <p>TEST</p>
+                        </mat-expansion-panel>
+                    </mat-accordion>
+                    <mat-accordion>
+                        <mat-expansion-panel>
+                            <mat-expansion-panel-header>
+                                <mat-panel-title>Diets</mat-panel-title>
+                            </mat-expansion-panel-header>
+                        </mat-expansion-panel>
+                    </mat-accordion>
                 </div>
             </div>
         </mat-card-content>
     </mat-card>
 </div>
-
-<mat-card>
-    <mat-card-subtitle>Use to build out story</mat-card-subtitle>
-    <mat-card-content id="temp">
-        <h3>High School - Student Athlete</h3>
-        <ul>
-            <li>2005 - 16yo - 200lbs</li>
-            <li>2007 - 18yo - 280lbs</li>
-        </ul>
-        <mat-divider [inset]="true"></mat-divider>
-        <h3>College - Lazy Student</h3>
-        <ul>
-            <li>2008 - 19yo - 310lbs</li>
-            <li>2010 - 21yo - 350lbs</li>
-        </ul>
-        <mat-divider [inset]="true"></mat-divider>
-        <h3>"Adulting"</h3>
-        <ul>
-            <li>2012 - 23yo - 250lbs</li>
-            <li>2014 - 25yo - 210lbs</li>
-            <li>2020 - 31yo - 250lbs</li>
-            <li>2023 - 34yo - 280lbs</li>
-            <li>2024 - 35yo - 225lbs</li>
-        </ul>
-    </mat-card-content>
-</mat-card>
