--- a/pwa/src/app/public/pages/home/home.component.html
+++ b/pwa/src/app/public/pages/home/home.component.html
@@ -1,4 +1,6 @@
-<app-slide-show></app-slide-show>
+<div class="slideshow">
+    <app-slide-show></app-slide-show>
+</div>
 <div class="container">
     <mat-card>
         <mat-card-title>For You Fitness</mat-card-title>
