--- a/pwa/src/app/public/pages/login/login.component.html
+++ b/pwa/src/app/public/pages/login/login.component.html
@@ -10,9 +10,7 @@
             <input matInput type="password">
         </mat-form-field>
         <mat-card-actions align="end">
-            <a mat-button>Register?</a>
-            <span class="spacer"></span>
-            <button mat-flat-button color="accent">Sign In</button>
+            <button mat-flat-button color="primary">Sign In</button>
         </mat-card-actions>
     </mat-card-content>
 </mat-card>
