--- a/pwa/src/app/app.component.css
+++ b/pwa/src/app/app.component.css
@@ -5,8 +5,13 @@
   color: white;
 }
 .mat-toolbar img {
-  height: 75px;
+  height: 50px;
   width: auto;
+  vertical-align: middle;
+  margin: unset;
+}
+a{
+  font-family: 'ForYouFont';
 }
 .spacer {
   flex: 1 1 auto;
