--- a/pwa/src/app/app.component.html
+++ b/pwa/src/app/app.component.html
@@ -1,17 +1,17 @@
 <mat-toolbar>
     <div class="header">
-        <button mat-button color="primary">
-            <img class="toolbar" src="../../../assets/images/ForYouFitnessLogo.png" />
-        </button>
-        <button mat-button routerLink="/home">For
-            You</button>
-        <button mat-button routerLink="/about">About Me</button>
-        <button mat-button routerLink="/offerings">Offerings</button>
-        <button mat-button routerLink="/contact">Contact</button>
+        <a mat-button color="primary">
+            <img class="toolbar" src="../../../assets/images/ForYouFitnessLogo_Mono-White.png" />
+        </a>
+        <a mat-button routerLink="/home">For
+            You</a>
+        <a mat-button routerLink="/about">About Me</a>
+        <a mat-button routerLink="/offerings">Offerings</a>
+        <a mat-button routerLink="/contact">Contact</a>
         <span class="spacer"></span>
-        <button mat-button color="accent" routerLink="/login">
+        <a mat-button color="accent" routerLink="/login">
             <mat-icon>login</mat-icon>Login
-        </button>
+        </a>
     </div>
 </mat-toolbar>
 <div class="container">
