--- a/pwa/src/app/public/pages/contact/contact.component.html
+++ b/pwa/src/app/public/pages/contact/contact.component.html
@@ -2,30 +2,30 @@
     <form>
         <mat-card-title>Get Started Today!</mat-card-title>
         <mat-card-content class="formLayout">
-            <mat-card class="contactForm">
-                <mat-card-title>Contact Info</mat-card-title>
-                <mat-card-content>
-                    <mat-form-field color="accent" appearance="outline">
-                        <mat-label>Name</mat-label>
-                        <input matInput><mat-icon matSuffix>account_circle</mat-icon>
-                    </mat-form-field>
-                    <mat-form-field color="accent" appearance="outline">
-                        <mat-label>Email</mat-label>
-                        <input matInput><mat-icon matSuffix>alternate_email</mat-icon>
-                    </mat-form-field>
-                    <mat-form-field color="accent"  appearance="outline">
-                        <mat-label>Phone</mat-label>
-                        <input matInput><mat-icon matSuffix>phone</mat-icon>
-                    </mat-form-field>
-                </mat-card-content>
-            </mat-card>
-            <span class="spacer"></span>
-            <div class="serviceSelection">
+            <span class="row">
+                <mat-card class="contactForm">
+                    <mat-card-title>Contact Info</mat-card-title>
+                    <mat-card-content>
+                        <mat-form-field color="accent" appearance="outline">
+                            <mat-label>Name</mat-label>
+                            <input matInput><mat-icon matSuffix>account_circle</mat-icon>
+                        </mat-form-field>
+                        <mat-form-field color="accent" appearance="outline">
+                            <mat-label>Email</mat-label>
+                            <input matInput><mat-icon matSuffix>alternate_email</mat-icon>
+                        </mat-form-field>
+                        <mat-form-field color="accent" appearance="outline">
+                            <mat-label>Phone</mat-label>
+                            <input matInput><mat-icon matSuffix>phone</mat-icon>
+                        </mat-form-field>
+                    </mat-card-content>
+                </mat-card>
+                <span class="spacer"></span>
                 <mat-card class="services">
                     <mat-card-title>Services</mat-card-title>
                     <mat-card-content>
                         <div class="youthList">
-                            <strong>Youth Programs</strong>
+                            <h4>Youth Programs</h4>
                             <span *ngFor="let service of youthServices">
                                 <mat-checkbox [value]="service.id">
                                     {{service?.name}}
@@ -35,7 +35,7 @@
                         </div>
                         <span class="spacer"></span>
                         <div class="adultList">
-                            <strong>Adult Programs</strong>
+                            <h4>Adult Programs</h4>
                             <span *ngFor="let service of adultServices">
                                 <mat-checkbox [value]="service.id">
                                     {{service?.name}}
@@ -45,24 +45,28 @@
                         </div>
                     </mat-card-content>
                 </mat-card>
-            </div>
-            <mat-card id="additionalInfo">
-                <mat-card-title>What can I do <strong>FOR YOU</strong>?</mat-card-title>
-                <div class="inputMessage">
+            </span>
+            <span class="row">
+                <mat-card class="additionalInfo">
+                    <mat-card-title>What can I do <strong>FOR YOU</strong>?</mat-card-title>
                     <mat-form-field color="accent" appearance="outline">
                         <mat-label>Message</mat-label>
                         <textarea matInput></textarea>
                     </mat-form-field>
-                </div>
-                <div class="referenceSource">
-                    <h1>How did you hear about us?</h1>
-                    <mat-button-toggle-group name="referenceSource">
-                        <mat-button-toggle color="accent" *ngFor="let source of referenceSources" [value]="source.id">
-                            {{source?.name}}
-                        </mat-button-toggle>
-                    </mat-button-toggle-group>
-                </div>
-            </mat-card>
+                </mat-card>
+            </span>
+            <span class="row">
+                <mat-card class="references">
+                    <mat-card-title>How did you hear about me?</mat-card-title>
+                    <mat-card-content> <mat-button-toggle-group name="referenceSource">
+                            <mat-button-toggle color="accent" *ngFor="let source of referenceSources"
+                                [value]="source.id">
+                                {{source?.name}}
+                            </mat-button-toggle>
+                        </mat-button-toggle-group>
+                    </mat-card-content>
+                </mat-card>
+            </span>
         </mat-card-content>
         <mat-card-footer>
             <mat-card-actions align="end">
